(VLC 2.1.0) bmp output for scene filter does not work (jpeg works)
scene filter output to jpeg works but bmp files written are unreadable. Tested on 2.1.0 as well as vlc-2.1.1-20131016-0203 nightly on Windows 8.
Was working in VLC 2.0.8
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- dimenox added Component::Video: filters Severity::normal Type::bug + 1 deleted label
added Component::Video: filters Severity::normal Type::bug + 1 deleted label
- dimenox changed milestone to %2.1.x maintenance bugs
changed milestone to %2.1.x maintenance bugs
- Jean-Baptiste Kempf added 1 deleted label
added 1 deleted label
- Owner
BMP was never officially supported, to be honest.
- Jean-Baptiste Kempf assigned to @jpsaman and unassigned @MigrationBot
assigned to @jpsaman and unassigned @MigrationBot
- Jean-Baptiste Kempf added Component::Stream output: Encoders label and removed Component::Video: filters label
added Component::Stream output: Encoders label and removed Component::Video: filters label
- Jean-Baptiste Kempf changed milestone to %2.2.0
changed milestone to %2.2.0
- Jean-Baptiste Kempf changed milestone to %2.2.x maintenance branch
changed milestone to %2.2.x maintenance branch
- Owner
It works for me on Linux 2.2.0 (FFmpeg), fails for me on Linux 2.1.3 (older FFmpeg) and fails for me on Windows nightly builds (libav, probably).
- Owner
[bmp @ 0x7f0670082300] Provided packet is too small, needs to be 1126454
- Jean-Baptiste Kempf assigned to @ileoo and unassigned @jpsaman
- Developer
Broken with latest ffmpeg git, works with latest libav git (both tested on Fedora).
commit f5a53d4e Author: Tristan Matthews le.businessman@gmail.com Date: Wed Apr 2 02:18:33 2014 -0400
avcodec encoder: get bytes per pixel from context if needed Falling back to 3 bytes broke the buffer allocation for BMP with ffmpeg, which defaults to RGBA. Fixes [#9687](https://code.videolan.org/videolan/vlc/-/issues/9687)
Original author: le.businessman@gmail.com
- Migration Bot added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed
- Rémi Denis-Courmont added Version::3.0.x label and removed 1 deleted label
added Version::3.0.x label and removed 1 deleted label